Waiting time BUG correction patch. #118 Tests on analysis implemented and verified manually. #28 #77 #78 #79 #80